--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,11 @@
       <artifactId>guice</artifactId>
       <version>4.2.3</version>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.11.0</version>
+    </dependency>
   </dependencies>
 
   <build>
